tests/error/misc_errors/invalid_arg_flag.err
Error: Invalid annotation (at $FILE:12:16)
   | 
10 | 
11 | @guppy.declare(module)
12 | def foo(x: int @blah) -> qubit: ...
   |                 ^^^^ Invalid type annotation

Guppy compilation failed due to 1 previous error
